--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ video {
 
 .origintitle {
     color: #528C62;
-    font-size: 32px;
+    font-size: 30px;
     font-weight: 400;
     text-align: center;
     padding: 10px 0 5px;
@@ -533,9 +533,9 @@ video {
 
 .origintext {
     color: #5B5B5B;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 400;
-    text-align: center;
+    text-align: left;
     letter-spacing: -1px;
 }
 
