--- a/css/style.css
+++ b/css/style.css
@@ -492,9 +492,9 @@ video {
 
 .Chamomile {
     position: absolute;
-    top: 30%;
-    left: 25%;
-}
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
 .text1 {
     color: rgba(255, 255, 255, 0.7);
