--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ a {
 }
 
 .bg1 {
-    background: url(../images/header/main_allinone.png)no-repeat left top /cover;
+    background: url(../images/header/main_allinone.png)no-repeat center top /cover;
 }
 
 .bg2 {
