--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding: 15px 20px 10px;
+    padding: 15px 20px 0px 10px;
 }
 
 /* 아래로 스크롤 했을 때 추가되는 선택자 */
@@ -64,8 +64,9 @@ a {
 
 .menu>li>a {
     display: block;
-    padding: 0 90px;
+    padding-left: 190px;
 }
+
 
 .menu a {
     font-size: 18px;
@@ -85,7 +86,6 @@ a {
     margin: auto;
     padding-bottom: 20px;
     gap: 20px;
-    padding-right: 90px;
 }
 
 .right img {
