--- a/css/style.css
+++ b/css/style.css
@@ -495,7 +495,7 @@ video {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+}
 .text1 {
     color: rgba(255, 255, 255, 0.7);
     font-size: 60px;
