--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 200; 
+    z-index: 200;
     transition: 0.5s;
 }
 
@@ -39,7 +39,7 @@ a {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding: 15px 20px 0px 10px;
+    padding: 15px 0px 10px 20px;
 }
 
 /* 아래로 스크롤 했을 때 추가되는 선택자 */
@@ -67,7 +67,6 @@ a {
     padding-left: 190px;
 }
 
-
 .menu a {
     font-size: 18px;
     font-weight: 500;
@@ -86,6 +85,7 @@ a {
     margin: auto;
     padding-bottom: 20px;
     gap: 20px;
+
 }
 
 .right img {
@@ -107,7 +107,6 @@ a {
 .bg3 {
     background: url(../images/header/main_suncraem.png) no-repeat center center /cover;
 }
-
 
 .mySwiper .textbox {
     width: 1320px;
@@ -497,8 +496,9 @@ video {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .text1 {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.8);
     font-size: 60px;
     font-weight: 700;
     text-align: center;
@@ -507,7 +507,7 @@ video {
 }
 
 .text2 {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.8);
     font-size: 22px;
     font-weight: 200;
     text-align: center;
@@ -521,6 +521,7 @@ video {
     flex-wrap: wrap;
     width: 100%;
     margin: 40px auto 0;
+
 }
 
 .origintitle {
@@ -559,7 +560,7 @@ video {
 }
 
 .origin li {
-    width: 24%;
+    width: 24.5%;
 }
 
 .origin li:hover img {
@@ -572,12 +573,12 @@ video {
 }
 
 .review {
-    width: 100%;
+    width: 1320px;
     margin: auto;
 }
 
 .review img {
-    width: 100%;
+    width: 95%;
 }
 
 .review a:hover {
