--- a/css/style.css
+++ b/css/style.css
@@ -426,9 +426,32 @@ h5 {
     line-height: 26px;
 }
 
+.eventbox {
+    position: relative;
+    width: 1320px;
+    margin: auto;
+}
+.eventbox .swiper-pagination-bullet {
+    width: 16px;
+    height: 16px;
+    background: #666666;
+}
+
+.eventbox .swiper-pagination-bullet-active {
+    width: 16px;
+    height: 16px;
+    background: #60c4fd;
+}
+
+.eventbox .swiper-button-next,
+.eventbox .swiper-button-prev{
+    top: 40%;
+    font-weight: bold;
+    color: #666666;
+}
 
 .event {
-    width: 1320px;
+    width: 1200px;
     margin: auto;
     padding-bottom: 30px;
 }
