--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,7 @@ h5 {
 .eventbox .swiper-pagination-bullet {
     width: 16px;
     height: 16px;
-    background: #666666;
+    background: #0066ff;
 }
 
 .eventbox .swiper-pagination-bullet-active {
