--- a/css/style.css
+++ b/css/style.css
@@ -712,21 +712,21 @@ td {
 
 @keyframes top{
     0%{transform: translateY(0);}
-    100%{transform: translateY(-30px)}
+    100%{transform: translateY(-15px)}
 }
 
 .topbtn {
     position: fixed;
-    right: 50px;
+    right: 60px;
     bottom: 30px;
     width: 45px;
-    animation: top 0.5s infinite alternate linear;
+    animation: top 0.6s infinite alternate linear;
+    z-index: 300;
 }
 
 .topbtn:hover{
     filter: opacity(50%);
 }
-
 
 html {
     scroll-behavior: smooth;
